discussion/kv_engine/183597/183597_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

reset magma stats

Change-Id: I7154abd47c4c840d6e79fa539cf9440507f036ef

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2022-12-02 08:48:55.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-02 09:04:50.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21605/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc b/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc
index c03a684b1..8adf5a3f5 100644
--- a/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc
+++ b/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc
@@ -349,8 +349,8 @@ magma::Status MagmaMemoryTrackingProxy::GetRange(
         bool returnValue,
         uint64_t count) {
     auto wrappedCallback = [&amp;itemCb](magma::Slice&amp; key,
-                                     magma::Slice &amp;meta,
-                                     magma::Slice &amp;value) {
+                                     magma::Slice&amp; meta,
+                                     magma::Slice&amp; value) {
         cb::UseArenaMallocPrimaryDomain domainGuard;
         return itemCb(key, meta, value);
     };
diff --git a/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h b/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h
index b6e25f333..7cd044a65 100644
--- a/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h
+++ b/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h
@@ -196,7 +196,7 @@ public:
 
     void ResetStats();
 
-    void GetFileStats(magma::MagmaFileStats &amp;fileStats);
+    void GetFileStats(magma::MagmaFileStats&amp; fileStats);
     void GetHistogramStats(magma::MagmaHistogramStats&amp; histogramStats);
 
     DomainAwareUniquePtr&lt;DomainAwareSeqIterator&gt; NewSeqIterator(

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21605/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22063/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12: error: no member named "ResetStats" in "magma::Magma" [clang-diagnostic-error]
    magma->ResetStats();
           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22063/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12:
error: no member named "ResetStats" in "magma::Magma" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22063/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51348/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc(365): error C2039: "ResetStats": is not a member of "magma::Magma" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51348/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43105/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12:
error: no member named "ResetStats" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43105/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11779/ : FAILURE

Compile error at [2022-12-02T08:58:08.698Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12:
error: no member named "ResetStats" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11779/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11869/ : FAILURE

Compile error at [2022-12-02T08:54:06.233Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12:
error: ?class magma::Magma? has no member named ?ResetStats?; did you mean ?GetStats??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11869/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24101/ : FAILURE

Compile error at [2022-12-02T09:02:55.152Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_bucket.cc:151:28:
error: ?getcwd? is not a member of ?cb::io?; did you mean ?getcwd??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24101/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25367/ : FAILURE

Compile error at [2022-12-02T08:59:19.259Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12:
error: no member named "ResetStats" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25367/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23592/ : FAILURE

Compile error at [2022-12-02T08:57:39.909Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12:
error: no member named "ResetStats" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23592/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32518/ : FAILURE

Compile error at [2022-12-02T09:03:38.103Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12:
error: no member named "ResetStats" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32518/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/816/ : FAILURE

Compile error at [2022-12-02T08:56:13.290Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12:
error: ?class magma::Magma? has no member named ?ResetStats?; did you mean ?GetStats??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/816/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24515/ : FAILURE

Compile error at [2022-12-02T08:58:53.859Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:365:12:
error: ?class magma::Magma? has no member named ?ResetStats?; did you mean ?GetStats??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24515/ )
----------------------------------------------------------------------------------------------------------------------
